[package]
name = "rsvcf2mutt"
version = "0.1.0"
authors = ["Björn Guth <scatty@bguth.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
xdg = "^2.1"

[dependencies.ical]
version = "0.5.*"
default-features = false
features = ["vcard", "property"]
